2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: new function 'fatal_', for hard errors
	Before this patch, the only way offered by tests/defs to
	properly signal a hard error was the `framework_failure_'
	function.  But the error message issued by that function,
	as its name would suggest, refers to a set-up failure in the
	testsuite, while hard errors can obviously also be due to
	other reasons.  The best way to fix this inconsistency is to
	introduce a new function with a more general error message.
	Inspired by a recent similar change to Gnulib's tests/init.sh.
	* tests/defs.in (fatal_): New function.
	* tests/README (Section "Writing test cases" subsection "Do"):
	Suggest the use of `fatal_', not of `framework_failure_', for
	generic hard errors.  The latter should be reserved for "real"
	set-up failures.

2011-06-05  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix typo-related error in auxdir2.test
	* tests/auxdir2.test (configure.in):  Close m4 quoting in the
	argument to AC_CONFIG_AUX_DIR.  Without this, aclocal fails with
	"ERROR: end of file in string".  This problem hasn't been exposed
	by the testsuite before because this test is in XFAIL_TESTS, so
	its failure went unnoticed, even if it was due to a wrong cause.
	Bug introduced in commit v1.11-249-g49ac3de.

2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: fix some more failures
	* tests/instdir-ltlib.test: Use creative quoting to avoid
	spuriously triggering the `sc_rm_minus_f' maintainer check.
	* tests/instdir-prog.test: Likewise.
	* tests/instspc-data.test: Use creative quoting to avoid
	spuriously triggering the `sc_tests_Exit_not_exit' maintainer
	check.

2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: fix some failures, extend some checks
	* Makefile.am (sc_diff_automake_in_automake): Update, as we
	now expect 9 lines, not 8, to be changed from `automake.in'
	to `automake'.