@@ -1,0 +1,75 @@
+#! /bin/sh
+# Copyright (C) 2011 Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Test for a behaviour of `TESTS_ENVIRONMENT' and `AM_TESTS_ENVIRONMENT'
+# w.r.t. file descriptor redirections which, although undocumented,
+# is nonetheless required by Gnulib's 'tests/init.sh' and by coreutils'
+# testsuite.
+# The checked behaviour is that we can portably do file descriptor
+# redirections by placing them at the end of a {AM_,}TESTS_ENVIRONMENT
+# definition without a following semicolon.  The need to support this
+# is detailedly motivated by coreutils bug#8846:
+#   <http://debbugs.gnu.org/cgi/bugreport.cgi?bug=8846>
+# and the following CC:ed thread on bug-autoconf list:
+#   <http://lists.gnu.org/archive/html/bug-autoconf/2011-06/msg00002.html>
+
+parallel_tests=yes
+. ./defs || Exit 1
+
+cat >> configure.in << 'END'
+AC_OUTPUT
+END
+
+cat >foo.test <<'END'
+#! /bin/sh
+echo " " $0: foofoofoo >&8
+echo " " $0: barbarbar >&9
+END
+chmod a+x foo.test
+
+$ACLOCAL
+$AUTOCONF
+
+# /bin/ksh seems more vulnerable to the issue highlighted in coreutils
+# bug#8846 than other shells are.  In particular, the default Korn Shell
+# on Debian GNU/Linux is affected by the issue.  So let's try to run our
+# test with /bin/ksh too, if that's available.
+if test "$SHELL" != /bin/ksh && test -f /bin/ksh; then
+  bin_ksh=/bin/ksh
+else
+  bin_ksh=:
+fi
+
+for sh in "$SHELL" "$bin_ksh"; do
+  test "$sh" = : && continue
+  for pfx in AM_ ''; do
+    unindent > Makefile.am <<END
+      TESTS = foo.test
+      ## No trailing semicolon here, *deliberately*.
+      ${pfx}TESTS_ENVIRONMENT = 8>&1 9>&8
+END
+    $AUTOMAKE -a
+    CONFIG_SHELL="$sh" $sh ./configure CONFIG_SHELL="$sh"
+    $MAKE check >stdout || { cat stdout; Exit 1; }
+    cat stdout
+    grep '[ /]foo\.test: foofoofoo$' stdout
+    grep '[ /]foo\.test: barbarbar$' stdout
+    $EGREP '(foofoofoo|barbarbar)' foo.log && Exit 1
+    : # For shells with buggy 'set -e'.
+  done
+done
+
+:
