@@ -1,3 +1,13 @@
+2011-06-14  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: check portable fd redirection in TESTS_ENVIRONMENT
+	* tests/tests-environment-fd-redirect.test: New test.
+	* tests/Makefile.am (TESTS): Update.
+	Motivated by coreutils bug#8846:
+	 <http://debbugs.gnu.org/cgi/bugreport.cgi?bug=8846>
+	See also following CC:ed thread on bug-autoconf list:
+	 <http://lists.gnu.org/archive/html/bug-autoconf/2011-06/msg00002.html>
+
 2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	test defs: new function 'fatal_', for hard errors
